[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whywhytools"
version = "0.5.0"
description = "A lightweight Python package for reading and writing JSON Lines (.jsonl) files."
authors = [
    { name="whywhybug", email="whywhybug@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/whywhybug/whywhytools"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
