[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "whywhytools"
dynamic = ["version"]
description = "A lightweight Python package for easy reading and writing of JSON, JSONL, and Pickle files."
authors = [
    { name="whywhybug", email="whywhybug@gmail.com" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.7"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/whywhybug/whywhytools"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
