[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "whywhytools"
dynamic = ["version"]
description = "A lightweight Python package for easy reading and writing of JSON, JSONL, and Pickle files."
authors = [{ name = "whywhybug", email = "whywhybug@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
safetensors = ["safetensors"]
all = ["torch>=2.0.0", "safetensors"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/whywhybug/whywhytools"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort (automatic import sorting)
    "N",    # pep8-naming (naming conventions)
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade (modernization)
    "FURB", # refurb (best practices)
    "SIM",  # flake8-simplify (code simplification)
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # Ignore line length violations (already handled by line-length)
    "UP015", # Ignore unnecessary mode argument (e.g., mode="r")
    "E402",  # Ignore module level import not at top of file
    "I001",  # Ignore unsorted imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["whywhytools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
